--- a/views/movies/movies.hbs
+++ b/views/movies/movies.hbs
@@ -1,1 +1,11 @@
-<h2>hello</h2>
+
+
+<h2>Movies</h2>
+<br>
+{{#each allMovies}}
+<h3>{{title}}</h3>
+<a href="/movies/{{_id}}">Details</a>
+<br>
+{{/each}}
+<br>
+<a href="/">Home</a>
